# telegram-chat-analyzer-bot

./: README.md  dockerfile  main.py  pyproject.toml  requirements.txt  tg_bot_control.sh
