[tool.poetry]
name = "tg-chat-bot"
version = "0.1"
description = "Analyzes chats with 2 people. Sends basic info, wordcloud pic, monthly activity (number of messages per month) and all-time activity (number of messages per day from start to finish)."
authors = ["Merana <merana.tech@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
contourpy = "1.3.0"
cycler = "0.12.1"
fonttools = "4.53.1"
idna = "3.8"
kiwisolver = "1.4.7"
matplotlib = "3.8.3"
numpy = "1.26.4"
packaging = "24.1"
pandas = "2.2.1"
pillow = "10.4.0"
pyparsing = "3.1.4"
pytelegrambotapi = "4.18.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.32.3"
six = "1.16.0"
tzdata = "2024.1"
urllib3 = "2.2.2"
wordcloud = "1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
